--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "react-scripts": "4.0.3",
     "typescript": "^4.3.2",
     "use-dynamic-refs": "^1.0.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,7 +24,8 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest"
+      "react-app/jest",
+      "eslint:recommended"
     ]
   },
   "browserslist": {
@@ -40,7 +41,16 @@
     ]
   },
   "devDependencies": {
+    "@imaginary-cloud/eslint-config-react": "1.0.1",
+    "@imaginary-cloud/prettier-config": "^1.0.0",
     "@types/react": "^17.0.9",
-    "@types/react-dom": "^17.0.6"
+    "@types/react-dom": "^17.0.6",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.1"
   }
 }
